--- a/photo-exchange/index.html
+++ b/photo-exchange/index.html
@@ -24,10 +24,11 @@
                     <input id="photo2_url" onkeyup="check2()" style="color: lightgray;" value="2_278184324" onblur="if(this.value==''){this.value='2_278184324';this.style.color ='lightgray';} check2()" onfocus="if(this.value=='2_278184324'){this.value='';this.style.color = 'gray'} check2()"></input>
                     <div class="link_end"><img src="images/fail.png" width="22px" height="22px" id="checked2"></img></div>
                 </div>
-                <!--Блоки с картинками-->
+                <!--Блок с первой картинкой-->
                 <div id="photo1_block" style="float: left; height: 310px; width: 320px;">
                     <img style="float: left; margin-top: 10px; border: 0px solid gray; border-radius: 10px;" height="300px" width="300px" src="images/nofoto.png" id="photo1_view"></img>
                 </div>
+                <!--Блоки с второй картинкой-->
                 <div id="photo2_block" style="float: right; height: 310px; width: 320px;">
                     <img style="float: right; margin-top: 10px; border: 0px solid gray; border-radius: 10px;" height="300px" width="300px" src="images/nofoto.png" id="photo2_view"></img>
                 </div>
