--- a/photo-exchange/index.html
+++ b/photo-exchange/index.html
@@ -10,9 +10,13 @@
     </head>
     <body>
         <div id="head" class="head">
-            <a onClick="invite()" class="button">Пригласить друзей</a><br>
+            <a onClick="invite()" class="button" style="float: left">Пригласить друзей</a>
+            <a class="button" style="float: right;">
+                <img src="https://pp.vk.me/c627925/v627925732/2c6cf/jtS369aaIFY.jpg" width="16" height="16">
+            </a>
+            <br>
             <!--Гл.блок-->
-            <div class="block_content" style="margin-top: 2px">
+            <div class="block_content" style="margin-top: 13px">
                 <!--Блок с первым фото-->
                 <div id="photo1" style="float: left;">
                     <a class="link">https://vk.com/photo</a>
