--- a/photo-exchange/index.html
+++ b/photo-exchange/index.html
@@ -12,9 +12,9 @@
         <div id="head" class="head">
             <a onClick="invite()" class="button" style="float: left">Пригласить друзей</a>
             <a class="button" style="float: right;">
-                <img src="https://pp.vk.me/c627925/v627925732/2c6cf/jtS369aaIFY.jpg" width="16" height="16">
+                <div style="float: left; padding-right: 6px;">Лиза Матяш</div>
+                <img src="https://pp.vk.me/c627925/v627925732/2c6cf/jtS369aaIFY.jpg" width="22" height="22" style="float: right;">
             </a>
-            <br>
             <!--Гл.блок-->
             <div class="block_content" style="margin-top: 13px">
                 <!--Блок с первым фото-->
