--- a/photo-exchange/index.html
+++ b/photo-exchange/index.html
@@ -13,7 +13,7 @@
             <a onClick="invite()" class="button" style="float: left">Пригласить друзей</a>
             <a class="button" style="float: right;">
                 <div style="float: left; padding-right: 6px;">Лиза Матяш</div>
-                <img src="https://pp.vk.me/c627925/v627925732/2c6cf/jtS369aaIFY.jpg" width="22" height="22" style="float: right;">
+                <img src=<script>$photo_50</script> width="22" height="22" style="float: right;">
             </a>
             <br>
             <!--Гл.блок-->
