--- a/photo-exchange/index.html
+++ b/photo-exchange/index.html
@@ -12,8 +12,8 @@
         <div id="head" class="head">
             <a onClick="invite()" class="button" style="float: left">Пригласить друзей</a>
             <a class="button" style="float: right;">
-                <div style="float: left; padding-right: 6px;">Лиза Матяш</div>
-                <img src="<script>$photo_user</script>" width="22" height="22" style="float: right;">
+                <div id="user_name" style="float: left; padding-right: 6px;">Лиза Матяш</div>
+                <img id="avatar" width="22" height="22" style="float: right;">
             </a>
             <br>
             <!--Гл.блок-->
