--- a/photo-exchange/index.html
+++ b/photo-exchange/index.html
@@ -7,6 +7,12 @@
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <script src="js/api.js" type="text/javascript"></script>
         <script src="//vk.com/js/api/xd_connection.js?2" type="text/javascript"></script>
+        <script src="//vk.com/js/api/openapi.js" type="text/javascript"></script>
+        <script type="text/javascript">
+            VK.init({
+                apiId: 5210807
+            });
+        </script>
     </head>
     <body>
         <div id="head" class="head">
