--- a/photo-exchange/index.html
+++ b/photo-exchange/index.html
@@ -6,6 +6,7 @@
         <script scr="js/jquery-1.6.2.js" type="text/javascript"></script>
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <script src="//vk.com/js/api/xd_connection.js?2" type="text/javascript"></script>
+        <script src="//vk.com/js/api/openapi.js" type="text/javascript"></script>
         <script src="js/api.js" type="text/javascript"></script>
     </head>
     <body>
