--- a/photo-exchange/index.html
+++ b/photo-exchange/index.html
@@ -13,7 +13,7 @@
         <div id="head" class="head">
             <a onClick="invite()" class="button" style="float: left">Пригласить друзей</a>
             <a class="button" style="float: right;">
-                <div id="user_name" style="float: left; padding-right: 6px;">Лиза Матяш</div>
+                <div id="user_name" style="float: left; padding-right: 6px;"></div>
                 <img id="ava" width="22" height="22" style="float: right;">
             </a>
             <br>
