--- a/photo-exchange/index.html
+++ b/photo-exchange/index.html
@@ -12,7 +12,7 @@
     <body>
         <div id="head" class="head">
             <a onClick="invite()" class="button" style="float: left">Пригласить друзей</a>
-            <a class="button" style="float: right;">
+            <a class="user_info" style="float: right;">
                 <div id="user_name" style="float: left; padding-right: 6px;"></div>
                 <img id="ava" width="22" height="22" style="float: right;">
             </a>
