--- a/photo-exchange/index.html
+++ b/photo-exchange/index.html
@@ -33,11 +33,11 @@
                 </div>
                 <!--Блок с первой картинкой-->
                 <div id="photo1_block" style="float: left; height: 310px; width: 320px;">
-                    <img style="float: left; margin-top: 10px; border: 0px solid gray; border-radius: 10px;" height="300px" width="300px" src="images/nofoto.png" id="photo1_view"></img>
+                    <img style="height: 300px; width: 300px; background-image: url(//smurfik997.github.io/photo-exchange/images/nofoto.png); background-size: contain;" class="block_img" height="300px" width="300px" id="photo1_view"></img>
                 </div>
                 <!--Блоки с второй картинкой-->
                 <div id="photo2_block" style="float: right; height: 310px; width: 320px;">
-                    <img style="float: right; margin-top: 10px; border: 0px solid gray; border-radius: 10px;" height="300px" width="300px" src="images/nofoto.png" id="photo2_view"></img>
+                    <img style="height: 300px; width: 300px; background-image: url(//smurfik997.github.io/photo-exchange/images/nofoto.png); background-size: contain;" class="block_img" height="300px" width="300px" id="photo2_view"></img>
                 </div>
                 <!--Блок картинки обмена-->
                 <div style="margin-top: 100px; float: left">
