--- a/photo-exchange/index.html
+++ b/photo-exchange/index.html
@@ -37,7 +37,7 @@
                 </div>
                 <!--Блоки с второй картинкой-->
                 <div id="photo2_block" style="float: right; height: 310px; width: 326px;">
-                    <img style="height: 300px; width: 300px; background-image: url(//smurfik997.github.io/photo-exchange/images/nofoto.png); background-size: contain;" class="block_img" height="300px" width="300px" id="photo2_view"></img>
+                    <img style="float: right; height: 300px; width: 300px; background-image: url(//smurfik997.github.io/photo-exchange/images/nofoto.png); background-size: contain;" class="block_img" height="300px" width="300px" id="photo2_view"></img>
                 </div>
                 <!--Блок картинки обмена-->
                 <div style="margin-top: 100px; float: left">
