--- a/photo-exchange/index.html
+++ b/photo-exchange/index.html
@@ -22,7 +22,7 @@
                 <!--Блок с первым фото-->
                 <div id="photo1" style="float: left;">
                     <a class="link">https://vk.com/photo</a>
-                    <input id="photo1_url" onkeyup="check1()" style="color: lightgray;" value="1_278184318" onblur="check1(); if(this.value==''){this.value='1_278184318';this.style.color ='lightgray';}" onfocus="check1(); if(this.value=='1_278184318'){this.value='';this.style.color = 'gray'}"></input>
+                    <input id="photo1_url" onkeyup="check1()" style="color: lightgray;" value="1_278184318" onblur="if(this.value==''){this.value='1_278184318';this.style.color ='lightgray';check1();}" onfocus="if(this.value=='1_278184318'){this.value='';this.style.color = 'gray';check1();}"></input>
                     <div class="link_end"><img src="images/fail.png" width="22px" height="22px" id="checked1"></img></div>
                 </div>
                 <!--Блок со вторым фото-->
