--- a/photo-exchange/index.html
+++ b/photo-exchange/index.html
@@ -32,12 +32,12 @@
                     <div class="link_end"><img src="images/fail.png" width="22px" height="22px" id="checked2"></img></div>
                 </div>
                 <!--Блок с первой картинкой-->
-                <div id="photo1_block" style="float: left; height: 310px; width: 326px;">
-                    <img style="height: 300px; width: 300px; background-image: url(//smurfik997.github.io/photo-exchange/images/nofoto.png); background-size: contain;" class="block_img" height="300px" width="300px" id="photo1_view"></img>
+                <div id="photo1_block" class="main_bl_img" style="float: left; padding: 10px 26px 0px 0px;">
+                    <img style="height: 300px; width: 300px; background-image: url(//smurfik997.github.io/photo-exchange/images/nofoto.png); background-size: contain;" class="block_img" id="photo1_view"></img>
                 </div>
                 <!--Блоки с второй картинкой-->
-                <div id="photo2_block" style="float: right; height: 310px; width: 326px;">
-                    <img style="float: right; height: 300px; width: 300px; background-image: url(//smurfik997.github.io/photo-exchange/images/nofoto.png); background-size: contain;" class="block_img" height="300px" width="300px" id="photo2_view"></img>
+                <div id="photo2_block" class="main_bl_img" style="float: right; padding: 10px 0px 0px 26px;">
+                    <img style="float: right; height: 300px; width: 300px; background-image: url(//smurfik997.github.io/photo-exchange/images/nofoto.png); background-size: contain;" class="block_img" id="photo2_view"></img>
                 </div>
                 <!--Блок картинки обмена-->
                 <div style="margin-top: 100px; float: left">
