--- a/photo-exchange/index.html
+++ b/photo-exchange/index.html
@@ -33,11 +33,11 @@
                 </div>
                 <!--Блок с первой картинкой-->
                 <div id="photo1_block" class="main_bl_img" style="float: left; padding: 10px 26px 0px 0px;">
-                    <img style="height: 300px; width: 300px; background-image: url(//smurfik997.github.io/photo-exchange/images/nofoto.png); background-size: contain;" class="block_img" id="photo1_view"></img>
+                    <img class="bl_none_img block_img" id="photo1_view"></img>
                 </div>
                 <!--Блоки с второй картинкой-->
                 <div id="photo2_block" class="main_bl_img" style="float: right; padding: 10px 0px 0px 26px;">
-                    <img style="float: right; height: 300px; width: 300px; background-image: url(//smurfik997.github.io/photo-exchange/images/nofoto.png); background-size: contain;" class="block_img" id="photo2_view"></img>
+                    <img style="float: right;" class="bl_none_img block_img" id="photo2_view"></img>
                 </div>
                 <!--Блок картинки обмена-->
                 <div style="margin-top: 100px; float: left">
