--- a/photo-exchange/index.html
+++ b/photo-exchange/index.html
@@ -32,12 +32,12 @@
                     <div class="link_end"><img src="images/fail.png" width="22px" height="22px" id="checked2"></img></div>
                 </div>
                 <!--Блок с первой картинкой-->
-                <div id="photo1_block" class="bl_none_img main_bl_img" style="float: left; padding: 10px 26px 0px 0px;">
-                    <img class="block_img" id="photo1_view"></img>
+                <div id="photo1_block" class="main_bl_img" style="float: left; padding: 10px 26px 0px 0px;">
+                    <img class="bl_none_img block_img" id="photo1_view"></img>
                 </div>
                 <!--Блоки с второй картинкой-->
-                <div id="photo2_block" class="bl_none_img main_bl_img" style="float: right; padding: 10px 0px 0px 26px;">
-                    <img style="float: right;" class="block_img" id="photo2_view"></img>
+                <div id="photo2_block" class="main_bl_img" style="float: right; padding: 10px 0px 0px 26px;">
+                    <img style="float: right;" class="bl_none_img block_img" id="photo2_view"></img>
                 </div>
                 <!--Блок картинки обмена-->
                 <div style="margin-top: 100px; float: left">
