--- a/photo-exchange/index.html
+++ b/photo-exchange/index.html
@@ -22,22 +22,22 @@
                 <!--Блок с первым фото-->
                 <div id="photo1" style="float: left;">
                     <a class="link">https://vk.com/photo</a>
-                    <input id="photo1_url" onkeyup="check1()" style="color: lightgray;" value="1_278184318" onblur="if(this.value==''){this.value='1_278184318';this.style.color ='lightgray';}" onfocus="if(this.value=='1_278184318'){this.value='';this.style.color = 'gray';}"></input>
-                    <div class="link_end"><img src="images/fail.png" width="22px" height="22px" id="checked1"></img></div>
+                    <input id="photo1_url" type="text" onkeyup="check1()" style="color: lightgray;" value="1_278184318" onblur="if(this.value==''){this.value='1_278184318';this.style.color ='lightgray';}" onfocus="if(this.value=='1_278184318'){this.value='';this.style.color = 'gray';}">
+                    <div class="link_end"><img src="images/fail.png" width="22px" height="22px" id="checked1"></div>
                 </div>
                 <!--Блок со вторым фото-->
                 <div id="photo2" style="float: right;">
                     <a class="link">https://vk.com/photo</a>
-                    <input id="photo2_url" style="color: lightgray;" value="2_278184324" onblur="if(this.value==''){this.value='2_278184324';this.style.color ='lightgray';} check2()" onfocus="if(this.value=='2_278184324'){this.value='';this.style.color = 'gray'} check2()"></input>
-                    <div class="link_end"><img src="images/fail.png" width="22px" height="22px" id="checked2"></img></div>
+                    <input id="photo2_url" style="color: lightgray;" value="2_278184324" onblur="if(this.value==''){this.value='2_278184324';this.style.color ='lightgray';} check2()" onfocus="if(this.value=='2_278184324'){this.value='';this.style.color = 'gray'} check2()">
+                    <div class="link_end"><img src="images/fail.png" width="22px" height="22px" id="checked2"></div>
                 </div>
                 <!--Блок с первой картинкой-->
                 <div id="photo1_block" class="main_bl_img" style="float: left; padding: 10px 26px 0px 0px;">
-                    <img class="bl_none_img block_img" id="photo1_view"></img>
+                    <img class="bl_none_img block_img" id="photo1_view">
                 </div>
                 <!--Блоки с второй картинкой-->
                 <div id="photo2_block" class="main_bl_img" style="float: right; padding: 10px 0px 0px 26px;">
-                    <img style="float: right;" class="bl_none_img block_img" id="photo2_view"></img>
+                    <img style="float: right;" class="bl_none_img block_img" id="photo2_view">
                 </div>
                 <!--Блок картинки обмена-->
                 <div style="margin-top: 100px; float: left">
