--- a/photo-exchange/index.html
+++ b/photo-exchange/index.html
@@ -22,13 +22,13 @@
                 <!--Блок с первым фото-->
                 <div id="photo1" style="float: left;">
                     <a class="link">https://vk.com/photo</a>
-                    <input id="photo1_url" type="text" onkeyup="check1()" style="color: lightgray;" placeholder="1_278184318">
+                    <input id="photo1_url" type="text" onkeyup="check1()" style="color: gray;" placeholder="1_278184318">
                     <div class="link_end"><img src="images/fail.png" width="22px" height="22px" id="checked1"></div>
                 </div>
                 <!--Блок со вторым фото-->
                 <div id="photo2" style="float: right;">
                     <a class="link">https://vk.com/photo</a>
-                    <input id="photo2_url" style="color: lightgray;" placeholder="2_278184324">
+                    <input id="photo2_url" style="color: gray;" placeholder="2_278184324">
                     <div class="link_end"><img src="images/fail.png" width="22px" height="22px" id="checked2"></div>
                 </div>
                 <!--Блок с первой картинкой-->
