--- a/photo-exchange/index.html
+++ b/photo-exchange/index.html
@@ -22,7 +22,7 @@
                 <!--Блок с первым фото-->
                 <div id="photo1" style="float: left;">
                     <a class="link">https://vk.com/photo</a>
-                    <input id="photo1_url" type="text" onkeyup="check1()" style="color: gray;" placeholder="1_278184318">
+                    <input id="photo1_url" type="text" onkeyup="alert(this.value);" style="color: gray;" placeholder="1_278184318">
                     <div class="link_end"><img src="images/fail.png" width="22px" height="22px" id="checked1"></div>
                 </div>
                 <!--Блок со вторым фото-->
