--- a/photo-exchange/index.html
+++ b/photo-exchange/index.html
@@ -19,13 +19,13 @@
             <br>
             <!--Гл.блок-->
             <div class="block_content" style="margin-top: 13px">
-                <!--Блок с первым фото-->
+                <!--Блок с URL-ом первого фото-->
                 <div id="photo1" style="float: left;">
                     <a class="link">https://vk.com/photo</a>
                     <input id="photo1_url" type="text" onkeyup="check1(this.value);" style="color: gray;" placeholder="1_278184318">
                     <div class="link_end"><img src="images/fail.png" width="22px" height="22px" id="checked1"></div>
                 </div>
-                <!--Блок со вторым фото-->
+                <!--Блок с URL-ом второго фото-->
                 <div id="photo2" style="float: right;">
                     <a class="link">https://vk.com/photo</a>
                     <input id="photo2_url" style="color: gray;" placeholder="2_278184324">
@@ -35,7 +35,7 @@
                 <div id="photo1_block" class="main_bl_img" style="float: left; padding: 10px 26px 0px 0px;">
                     <img class="bl_none_img block_img" id="photo1_view">
                 </div>
-                <!--Блоки с второй картинкой-->
+                <!--Блок со второй картинкой-->
                 <div id="photo2_block" class="main_bl_img" style="float: right; padding: 10px 0px 0px 26px;">
                     <img style="float: right;" class="bl_none_img block_img" id="photo2_view">
                 </div>
