--- a/AppForVK/index.html
+++ b/AppForVK/index.html
@@ -2,6 +2,7 @@
     <head>
         <script type="text/javascript" src="js/jquery-3.1.0.min.js"></script>
         <script type="text/javascript" src="js/main.js"></script>
+        <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
         
