--- a/AppForVK/index.html
+++ b/AppForVK/index.html
@@ -4,7 +4,7 @@
         <script type="text/javascript" src="js/main.js"></script>
         <link rel="stylesheet" href="css/main.css">
     </head>
-    <body onresize="ver_align();">
+    <body onresize="ver_align();" onload="ver_align();">
         
     </body>
 </html>
