--- a/AppForVK/index.html
+++ b/AppForVK/index.html
@@ -4,12 +4,13 @@
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body onresize="ver_align();">
-        <div id="main_block" class="main_block">
+        <div id="main_block">
             <div style="display: none;" id="text_hidden"></div>
             <div id="h">New Post</div>
-            <label id="button" for="text-file" style="margin-top: 0;">Select Files</label>
+            <label id="button" for="text-file">Select Files</label>
             <input type="file" id="text-file" accept="text/plain" style="display: none;" onchange="file_func(this.files);"> 
         </div>
+        <div id="res_block"></div>
         <script type="text/javascript" src="js/main.js"></script>
     </body>
 </html>
