--- a/AppForVK/index.html
+++ b/AppForVK/index.html
@@ -10,7 +10,14 @@
             <label id="button" for="text-file">Select Files</label>
             <input type="file" id="text-file" accept="text/plain" style="display: none;" onchange="file_func(this.files);"> 
         </div>
-        <div id="res_block"></div>
+        <div id="res_block" style="display: none;">
+            <div id="res_content" style="margin-top: 78px; margin-left: 583px;">
+                <div id="panel">
+                    <div id="close">+</div>
+                </div>
+                Lol
+            </div>
+        </div>
         <script type="text/javascript" src="js/main.js"></script>
     </body>
 </html>
