--- a/AppForVK/index.html
+++ b/AppForVK/index.html
@@ -15,7 +15,9 @@
                 <div id="panel">
                     <div id="close">+</div>
                 </div>
-                Lol
+                <div id="res_text">
+                    Lol
+                </div>
             </div>
         </div>
         <script type="text/javascript" src="js/main.js"></script>
