--- a/AppForVK/index.html
+++ b/AppForVK/index.html
@@ -1,6 +1,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <script type="text/javascript" src="js/jquery-3.1.0.min.js"></script>
+        <script src="https://vk.com/js/api/xd_connection.js?2" type="text/javascript"></script>
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body onresize="ver_align();">
