--- a/AppForVK/index.html
+++ b/AppForVK/index.html
@@ -10,18 +10,19 @@
             <div style="display: none;" id="text_hidden"></div>
             <div id="h">New Post</div>
             <label id="button" class="button" for="text-file">Select Files</label>
+            <div id="button1" class="button" onclick="upload();" style="display: none;">Continue</div>
             <input type="file" id="text-file" accept="text/plain" style="display: none;" onchange="file_func(this.files);"> 
         </div>
-        <div id="res_block" style="display: none;">
+        <!--<div id="res_block" style="display: none;">
             <div id="res_content" style="margin-top: 78px; margin-left: 583px;">
                 <div id="panel">
                     <div id="close">+</div>
                 </div>
                 <div id="res_text">
-                    <div id="button1" class="button" onclick="upload();">Continue</div>
+                    
                 </div>
             </div>
-        </div>
+        </div>-->
         <script type="text/javascript" src="js/main.js"></script>
     </body>
 </html>
