--- a/AppForVK/index.html
+++ b/AppForVK/index.html
@@ -9,9 +9,13 @@
         <div id="main_block">
             <div style="display: none;" id="text_hidden"></div>
             <div id="h">New Post</div>
-            <label id="button" class="button" for="text-file">Select Files</label>
+            <label id="button" class="button" for="text-file">Select File</label>
             <div id="button1" class="button" onclick="upload();" style="display: none;">Continue</div>
-            <input type="file" id="text-file" accept="text/plain" style="display: none;" onchange="file_func(this.files);"> 
+            <input type="file" id="text-file" enctype="multipart/form-data" accept="text/plain" style="display: none;" onchange="file_func(this.files);">
+            <div id="status_bar">
+                <div id="first_step" class="steps" style="border-radius: 3px 0px 0px 3px; float: left;"></div>
+                <div id="second_step" class="steps" style="border-radius: 0px 3px 3px 0px; float: right;"></div>
+            </div>
         </div>
         <!--<div id="res_block" style="display: none;">
             <div id="res_content" style="margin-top: 78px; margin-left: 583px;">
