--- a/AppForVK/index.html
+++ b/AppForVK/index.html
@@ -8,7 +8,7 @@
     <body onresize="ver_align();">
         <div id="main_block">
             <div style="display: none;" id="text_hidden"></div>
-            <div id="h">New Post</div>
+            <div id="h">New Post (Beta)</div>
             <label id="button" class="button" for="file">Select File</label>
             <div id="button1" class="button" onclick="upload();" style="display: none;">Continue</div>
             <input type="file" id="file" name="file" style="display: none;" onchange="file_func(this.files);">
