--- a/PixelArt/create.html
+++ b/PixelArt/create.html
@@ -8,9 +8,14 @@
     </head>
     <body>
         <div id="main_block">
+            <div style="text-align: center;">
+                <button id="save">Save</button></div>
         </div>   
     </body>
     <script type="text/javascript">
-        draw(20, 20, 15, 15, 2, document.getElementById('main_block'), '#e9ebee');
+        draw(30, 30, 15, 15, 2, document.getElementById('main_block'), 'rgb(233, 235, 238)');
+        doc('save').onclick = function () {
+            save(15, 15, 'green');
+        }
     </script>
 </html>
