--- a/PixelArt/index.html
+++ b/PixelArt/index.html
@@ -10,5 +10,6 @@
         <div id="main_block">
         </div>   
     </body>
-    <script type="text/javascript" src="js/heart.js"></script>
+    <!--<script type="text/javascript" src="js/heart.js"></script>-->
+    <script type="text/javascript" src="js/heart1.js"></script>
 </html>
