--- a/PixelArt/index.html
+++ b/PixelArt/index.html
@@ -3,7 +3,8 @@
         <title>Paint</title>
         <meta charset="utf-8">
         <script type="text/javascript" src="js/jquery-3.1.0.min.js"></script>
-        <script type="text/javascript" src="js/main.lib.js"></script>
+        <!--<script type="text/javascript" src="js/main.lib.js"></script>-->
+        <script type="text/javascript" src="js/main.lib.v2.js"></script>
         <link type="text/css" rel="stylesheet" href="css/style.css">
     </head>
     <body>
@@ -12,4 +13,7 @@
     </body>
     <!--<script type="text/javascript" src="js/heart.js"></script>-->
     <script type="text/javascript" src="js/heart1.js"></script>
+    <!--<script type="text/javascript">
+        draw(1, 100, 100, 50, 15, 2, doc('main_block'), 'green', 'div', 'border-radius: 4px;', 20);
+    </script>-->
 </html>
