--- a/PixelArt/index.html
+++ b/PixelArt/index.html
@@ -2,9 +2,9 @@
     <head>
         <title>Paint</title>
         <meta charset="utf-8">
-        <script type="text/javascript" src="js/jquery-3.1.0.min.js"></script>
+        <!--<script type="text/javascript" src="js/jquery-3.1.0.min.js"></script>-->
         <!--<script type="text/javascript" src="js/main.lib.js"></script>-->
-        <script type="text/javascript" src="js/main.lib.v2.js"></script>
+        <script type="text/javascript" src="js/libs/main.lib.v2.js"></script>
         <link type="text/css" rel="stylesheet" href="css/style.css">
     </head>
     <body>
@@ -12,8 +12,8 @@
         </div>   
     </body>
     <!--<script type="text/javascript" src="js/heart.js"></script>-->
-    <script type="text/javascript" src="js/heart1.js"></script>
+    <script type="text/javascript" src="js/animations/heart1.js"></script>
     <!--<script type="text/javascript">
-        draw(1, 100, 100, 50, 15, 2, doc('main_block'), 'green', 'div', 'border-radius: 4px;', 20);
+        draw(1, 30, 30, 15, 15, 2, doc('main_block'), 'green', 'div', 'border-radius: 4px;', 8);
     </script>-->
 </html>
