--- a/PixelArt/create.html
+++ b/PixelArt/create.html
@@ -3,7 +3,7 @@
         <title>Paint. Creators page</title>
         <meta charset="utf-8">
         <script type="text/javascript" src="js/jquery-3.1.0.min.js"></script>
-        <script type="text/javascript" src="js/creators.lib.js"></script>
+        <script type="text/javascript" src="js/libs/creators.lib.js"></script>
         <link type="text/css" rel="stylesheet" href="css/style.css">
     </head>
     <body>
