--- a/TicTacToe/index.html
+++ b/TicTacToe/index.html
@@ -5,6 +5,8 @@
             #mainBlock {
                 width: 340px;
                 height: 340px;
+                max-height: 340px;
+                max-width: 340px;
                 position: absolute;
                 top: 50%;
                 left: 50%;
