--- a/TicTacToe/index.html
+++ b/TicTacToe/index.html
@@ -73,7 +73,7 @@
     <body>
         <div id="mainBlock">
             <div id="header">
-                Tic Tac Toe
+                Tic Tac Toe (Alpha)
             </div>
             <div id="gameSpace">
                 <div id="ver">
