--- a/TicTacToe/index.html
+++ b/TicTacToe/index.html
@@ -165,7 +165,7 @@
             for (var n = 1; n <= bCount; n++) {
                 unFilledPlates[n - 1] = n;
             }
-            var name = 'Tic Tac Toe:';
+            var name = 'Tic Tac Toe (Debug Sys):';
 
             for (var n = 1; n <= bCount; n++) {
                 doc('button' + n).onclick = function(e) {
