--- a/TicTacToe/index.html
+++ b/TicTacToe/index.html
@@ -118,12 +118,8 @@
                 }
             }
 
-            function blockGameSpace(count) {
-                for (var n = 1; n <= count; n++) {
-                    doc('button' + n).onclick = function(e) {
-                        console.log(name + 'Game space is blocked');
-                    };
-                }
+            function debug(val) {
+                console.log('Tic Tac Toe (Debug Sys):', value)
             }
 
             function searchInArr(arr, val) {
@@ -134,6 +130,14 @@
                 }
 
                 return -1;
+            }
+
+            function blockGameSpace(count) {
+                for (var n = 1; n <= count; n++) {
+                    doc('button' + n).onclick = function(e) {
+                        debug('Game space is blocked');
+                    };
+                }
             }
 
             function botMotion(arr) {
@@ -157,7 +161,7 @@
                     delete unFilledPlates[freePlatesArr[num] - 1];
                 }
 
-                console.log(name, {'Array': freePlatesArr, 'Random': num});
+                debug({'Array': freePlatesArr, 'Random': num});
             } 
 
             var bCount = 9;
@@ -165,7 +169,6 @@
             for (var n = 1; n <= bCount; n++) {
                 unFilledPlates[n - 1] = n;
             }
-            var name = 'Tic Tac Toe (Debug Sys):';
 
             for (var n = 1; n <= bCount; n++) {
                 doc('button' + n).onclick = function(e) {
@@ -177,9 +180,9 @@
                         doc(e.target.id).style.cursor = 'no-drop';
                         delete unFilledPlates[pos - 1];
                         botMotion(unFilledPlates);
-                        console.log(name, {'ID: ': e.target.id, 'Array': unFilledPlates});
+                        debug({'ID: ': e.target.id, 'Array': unFilledPlates});
                     } else {
-                        console.log(name, 'Button is already pressed');
+                        debug('Button is already pressed');
                     }
                 }
             }
