--- a/TicTacToe/index.html
+++ b/TicTacToe/index.html
@@ -119,7 +119,7 @@
             }
 
             function debug(val) {
-                console.log('Tic Tac Toe (Debug Sys):', value)
+                console.log('Tic Tac Toe (Debug Sys):', val);
             }
 
             function searchInArr(arr, val) {
